# AndroidNDKTool

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/swein/androidndktool/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/examples/array_type/: array_type.cpp
app/src/main/cpp/examples/basic/: basic.cpp
app/src/main/cpp/examples/basic/people/: people.cpp  people.h
app/src/main/cpp/examples/create_object_in_cpp_and_return_it_to_app_end/: create_object_in_cpp_and_return_it_to_app.cpp
app/src/main/cpp/examples/datat_ype/: data_type.cpp
app/src/main/cpp/examples/dynamicload/: jni_dynamic_load.cpp
app/src/main/cpp/examples/exception_example/: exception_example.cpp
app/src/main/cpp/examples/interface_callback_example/: interface_callback_example.cpp
app/src/main/cpp/examples/object_field/: object_field.cpp
app/src/main/cpp/examples/object_method/: object_method.cpp
app/src/main/cpp/examples/reference_example/: reference_example.cpp
app/src/main/cpp/examples/string_example/: string_example.cpp
app/src/main/cpp/framework/utility/debug/: i_log.h
app/src/main/java/com/swein/androidndktool/: MainActivity.kt
app/src/main/java/com/swein/androidndktool/examples/arraytype/: ArrayTypeActivity.kt  JNIArrayType.kt
app/src/main/java/com/swein/androidndktool/examples/basic/: BasicExampleActivity.kt
app/src/main/java/com/swein/androidndktool/examples/basic/nativemanager/basic/: BasicNative.kt
app/src/main/java/com/swein/androidndktool/examples/basic/nativemanager/people/: PeopleNative.kt
app/src/main/java/com/swein/androidndktool/examples/create_object_in_cpp_and_return_it_to_app_end/: CreateByCPP.kt  CreateObjectInCppAndReturnItToAppActivity.kt  JNICreateObject.kt
app/src/main/java/com/swein/androidndktool/examples/datatype/: DataTypeExampleActivity.kt  JNIDataType.kt
app/src/main/java/com/swein/androidndktool/examples/dynamicload/: DynamicLoadExampleActivity.kt  JNIDynamicLoad.kt
app/src/main/java/com/swein/androidndktool/examples/exceptionexample/: ExceptionExampleActivity.kt  JNIException.kt
app/src/main/java/com/swein/androidndktool/examples/interfacecallbackexample/: InterfaceCallbackExampleActivity.kt  JNIInterfaceCallbackExample.kt
app/src/main/java/com/swein/androidndktool/examples/objectfieldexample/: Animal.kt  JNIObjectFieldExample.kt  ObjectFieldExampleActivity.kt
app/src/main/java/com/swein/androidndktool/examples/objectmethodexample/: JNIObjectMethodExample.kt  ObjectMethodExampleActivity.kt  TestObject.kt
app/src/main/java/com/swein/androidndktool/examples/referenceexample/: JNIReference.kt  ReferenceExampleActivity.kt
app/src/main/java/com/swein/androidndktool/examples/stringexample/: JNIStringExample.kt  StringExampleActivity.kt
app/src/main/java/com/swein/androidndktool/framework/utility/debug/: ILog.kt
app/src/main/res/layout/: activity_array_type.xml  activity_basic_example.xml  activity_create_object_in_cpp_and_return_it_to_app.xml  activity_data_type_example.xml  activity_dynamic_load_example.xml  activity_exception_example.xml  activity_interface_callback_example.xml  activity_object_field_example.xml  activity_object_method_example.xml  activity_reference_example.xml  activity_string_example.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/swein/androidndktool/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
